--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.4",
     "aws-amplify": "^4.1.1",
     "next": "11.0.0",
+    "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
